# tr-trimmer

./: Cargo.toml
.github/workflows/: build.yaml
src/: main.rs  sdust.rs  tr.rs
